fixed mobile alignment for landing page and started flex box two divs

--- a/main.css
+++ b/main.css
@@ -50,6 +50,7 @@ h2 {
 
 #see_proj_btn {
   display: none;
+  /* margin-bottom: 00px; */
 }
 
 #section1 h2 {
@@ -85,6 +86,7 @@ h2 {
 @media screen and (max-width: 480px) {
   #section1 h1 {
       font-size: 3.0rem;
+      padding-top: 200px;
   }
 
   #section1 h2 {
@@ -99,10 +101,20 @@ h2 {
   }
 }
 
+.flex-container {
+  display: flex;
+}
+
 #section2_wrapper {
   background-color: white;
-  height: 800px;
+   height: 800px;
+  /*display: inline-block;
+	width: 500px;
+	min-height: 50px;
+	background-color: #eee;
+	height: auto; */
 }
+
 #section3_wrapper {
   background-color: blue;
   height: 1000px;
@@ -113,9 +125,10 @@ h2 {
 }
 
 #section2 {
-  margin-left: 200px;
+  /* margin-left: 200px;
   margin-right: 600px;
-  padding-top: 250px;
+  padding-top: 250px; */
+  
 }
 
 #section2 h2 {
@@ -127,8 +140,6 @@ h2 {
 }
 
 #section2-1 {
-  position: relative;
-  margin-left: 200px;
-  margin-right: 600px;
-  padding-top: 250px;
+  
+  
 }
